fixed white spot between the scrollbars

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -15,9 +15,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 20px;
-}
-::-webkit-scrollbar-track {
-  background-color: transparent;
+  height: 20px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #3F3f3f;
@@ -28,6 +26,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #262626;
 }
+::-webkit-scrollbar-corner { background-color: transparent;}
 
 /* there may be a better
 location to put this, but I don't know
